--- a/src/resource/views/admin/all/order.hbs
+++ b/src/resource/views/admin/all/order.hbs
@@ -9,8 +9,8 @@
         <label>Sắp xếp theo:</label>
         <select id="createdAt" class="filter-btn">
           <option value="">Ngày đặt hàng</option>
-          <option value="1">Ngày tăng dần</option>
-          <option value="-1">Ngày giảm dần</option>
+          <option value="-1">Ngày mới nhất</option>
+          <option value="1">Ngày xa nhất</option>
         </select>
 
         <select id="totalOrderPrice" class="filter-btn">
