--- a/src/resource/views/admin/all/purchase.hbs
+++ b/src/resource/views/admin/all/purchase.hbs
@@ -24,8 +24,8 @@
         <label>Lọc theo:</label>
         <select id="purchaseDate" class="filter-btn">
           <option value="">Ngày đặt hàng</option>
-          <option value="1">Ngày tăng dần</option>
-          <option value="-1">Ngày giảm dần</option>
+          <option value="-1">Ngày mới nhất</option>
+          <option value="1">Ngày xa nhất</option>
         </select>
       </div>
 
