--- a/src/resource/views/admin/detail/supplier.hbs
+++ b/src/resource/views/admin/detail/supplier.hbs
@@ -14,7 +14,7 @@
       </tr>
       <tr>
         <td>Email</td>
-        <td><input type="text" id="email"></td>
+        <td><input type="text" id="email" disabled></td>
       </tr>
       <tr>
         <td>SĐT</td>
