--- a/src/public/css/admin/body.css
+++ b/src/public/css/admin/body.css
@@ -131,6 +131,8 @@ div.control-bar {
 }
 table {
   width: 100%;
+  padding: 0 5px;
+  box-sizing: border-box;
   border-spacing: 0px 10px;
   border-radius: 10px;
   thead {
@@ -175,7 +177,7 @@ div.table {
   background-color: #F0F0F0;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 4px 8px 0 rgba(0, 0, 0, 0.19);
   border-radius: 10px;
-  padding: 10px;
+  padding: 5px;
   box-sizing: border-box;
   div.table-button {
     display: flex;
@@ -255,20 +257,20 @@ div.notification {
   animation-timing-function: linear
 }
 div.modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 2; /* Sit on top */
+  display: none; 
+  position: fixed;
+  z-index: 999; 
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
+  width: 100%; 
+  height: 100%; 
+  overflow: auto; 
   background-color: rgba(0, 0, 0, 0.4);
   .modal-content {
     background-color: #fefefe;
     border: 1px solid #888;
-    width: 50%; /* Could be more or less, depending on screen size */
-    border-radius: 5px;
+    width: 50%;
+    border-radius: 10px;
     position: absolute;
     top: 50%;
     left: 50%;
