--- a/src/resource/views/admin/detail/employee.hbs
+++ b/src/resource/views/admin/detail/employee.hbs
@@ -18,7 +18,7 @@
       </tr>
       <tr>
         <td>Email</td>
-        <td><input type="text" id="email" name="email"></td>
+        <td><input type="text" id="email" name="email" disabled></td>
       </tr>
       <tr>
         <td>SĐT</td>
