--- a/src/resource/views/admin/detail/product.hbs
+++ b/src/resource/views/admin/detail/product.hbs
@@ -66,6 +66,10 @@
         <td><input type="text" id="details"></td>
       </tr>
       <tr>
+        <td>HDSD</td>
+        <td><input type="text" id="guide"></td>
+      </tr>
+      <tr>
         <td>Số lượng</td>
         <td><input type="text" id="quantity"></td>
       </tr>
@@ -84,6 +88,13 @@
       <tr>
         <td>Tình trạng sản phẩm</td>
         <td><select name="status" id="status"></select></td>
+      </tr>
+      <tr>
+        <td>Ảnh sản phẩm</td>
+        <td>
+          <img src="" alt="loading" id="image">
+          <input type="file" name="img" id="img"/>
+        </td>
       </tr>
     </table>
     
