--- a/src/resource/views/admin/detail/profile.hbs
+++ b/src/resource/views/admin/detail/profile.hbs
@@ -14,11 +14,11 @@
       </tr>
       <tr>
         <td>Vị trí</td>
-        <td><select name="role" id="role"></select></td>
+        <td><select name="role" id="role" disabled></select></td>
       </tr>
       <tr>
         <td>Email</td>
-        <td><input type="text" id="email" name="email"></td>
+        <td><input type="text" id="email" name="email" disabled></td>
       </tr>
       <tr>
         <td>SĐT</td>
@@ -37,7 +37,7 @@
       </tr>
       <tr>
         <td>Cửa hàng làm việc</td>
-        <td><select name="store" id="store"></select></td>
+        <td><select name="store" id="store" disabled></select></td>
       </tr>
       <tr>
         <td>Ngày vào làm</td>
