--- a/src/public/css/user/header.css
+++ b/src/public/css/user/header.css
@@ -36,6 +36,29 @@ header {
     box-sizing: border-box;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
+  #search-products {
+    position: absolute;
+    top: 120px;
+    width: 100%;
+    background-color: #FFDFDF;
+    overflow-y: scroll;
+    box-sizing: border-box;
+    .product {
+      width: 100%;
+      box-sizing: border-box;
+      background-color: white;
+      border-radius: 10px;
+      margin-top: 5px;
+      padding: 10px;
+      height: 50px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      cursor: pointer;
+      img { width: 40px; height: 40px;}
+    }
+    .products-match::-webkit-scrollbar {display: none}
+  }
   .header-button {
     padding: 0 20px 0 20px; 
     display: flex;
