--- a/src/resource/views/users/allOrders.hbs
+++ b/src/resource/views/users/allOrders.hbs
@@ -26,19 +26,19 @@
     <div class="info">
       <div class="form-group">
         <label for="name">Tên Khách Hàng *</label>
-        <input type="text" id="name" name="name" required>
+        <input type="text" id="name" name="name">
         <span class="form-message"></span>
       </div>
 
       <div class="form-group">
         <label for="phone">Số Điện Thoại *</label>
-        <input type="text" id="phone" name="phone" required>
+        <input type="text" id="phone" name="phone">
         <span class="form-message"></span>
       </div>
 
       <div class="form-group">
         <label for="address">Địa Chỉ Nhận Hàng *</label>
-        <input type="text" id="address" name="address" required>
+        <input type="text" id="address" name="address">
         <span class="form-message"></span>
       </div>
 
