--- a/src/resource/views/users/allOrders.hbs
+++ b/src/resource/views/users/allOrders.hbs
@@ -6,8 +6,9 @@
       <table>
         <thead>
           <tr>
+            <td style="width: 5%;"></td>
             <td style="width: 15%;"></td>
-            <td style="width: 50%;">Sản Phẩm</td>
+            <td style="width: 45%;">Sản Phẩm</td>
             <td style="width: 10%;">Đơn Giá</td>
             <td style="width: 10%;">Số Lượng</td>
             <td style="width: 10%;">Tổng Tiền</td>
@@ -15,7 +16,11 @@
           </tr>
         </thead>
         <tbody></tbody>
-        <tfoot></tfoot>
+        <tfoot>
+          <td colspan="5">Tổng</td>
+          <td class="total"></td>
+          <td></td>
+        </tfoot>
       </table>
     </div>
   </div>
