--- a/src/public/css/user/allOrders.css
+++ b/src/public/css/user/allOrders.css
@@ -29,18 +29,36 @@
       }
       tbody {
         td {height: 100px}
-        .delete-button {cursor: pointer}
-        img {
-          width: 75px;
-          aspect-ratio: 1/1;
+        tr {
+          position: relative;
+          img {
+            width: 75px;
+            aspect-ratio: 1/1;
+          }
+          a { 
+            text-decoration: none; 
+            color: black;
+            padding-left: 0 !important;
+            border: none;
+            background-color: transparent !important
+          }
+          .delete-button {cursor: pointer}
         }
-        a { 
-          text-decoration: none; 
-          color: black;
-          padding-left: 0 !important;
-          border: none;
-          background-color: transparent !important
-        }
+      }
+      td.unavailable {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 95%;
+        height: 100%;
+        background: rgba(200, 200, 200, 0.7); /* Semi-transparent red overlay */
+        font-weight: bold;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 32px;
+        z-index: 10;
+        border-radius: 10px;
       }
     }
   }
