--- a/src/public/css/user/header.css
+++ b/src/public/css/user/header.css
@@ -7,7 +7,7 @@ header {
   top: 0;
   width: 100%;
   background-color: #FFDFDF;
-  z-index: 3;
+  z-index: 999;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   transition: 0.2s;
   .store-logo {
@@ -28,9 +28,11 @@ header {
   }
   #search-input {
     position: absolute;
-    top: 70px;
-    width: 100%;
-    height: 50px;
+    top: 75px;
+    width: 90%;
+    height: 80px;
+    left: 50%;
+    transform: translateX(-50%);
     border-style: none;
     text-align: center;
     box-sizing: border-box;
@@ -38,9 +40,13 @@ header {
   }
   #search-products {
     position: absolute;
-    top: 120px;
-    width: 100%;
-    background-color: #FFDFDF;
+    top: 160px;
+    width: 90%;
+    height: 300px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: white;
+    border-radius: 10px;
     overflow-y: scroll;
     box-sizing: border-box;
     .product {
@@ -48,17 +54,20 @@ header {
       box-sizing: border-box;
       background-color: white;
       border-radius: 10px;
-      margin-top: 5px;
       padding: 10px;
       height: 50px;
       display: flex;
       align-items: center;
       justify-content: space-between;
       cursor: pointer;
+      a {
+        text-decoration: none;
+        color: black;
+      }
       img { width: 40px; height: 40px;}
     }
-    .products-match::-webkit-scrollbar {display: none}
   }
+  #search-products::-webkit-scrollbar {display: none}
   .header-button {
     padding: 0 20px 0 20px; 
     display: flex;
