--- a/src/resource/views/admin/detail/employee.hbs
+++ b/src/resource/views/admin/detail/employee.hbs
@@ -17,6 +17,10 @@
         <td><select name="role" id="role"></select></td>
       </tr>
       <tr>
+        <td>Mức lương</td>
+        <td><input type="text" id="wage" name="wage" disabled></td>
+      </tr>
+      <tr>
         <td>Email</td>
         <td><input type="text" id="email" name="email" disabled></td>
       </tr>
