--- a/src/public/css/admin/allChats.css
+++ b/src/public/css/admin/allChats.css
@@ -34,6 +34,7 @@
       outline: 1.5px solid #D1A6A6;
     }
     .chat-list {
+      margin-top: 5px;
       width: 100%;
       display: flex;
       flex-direction: column;
