--- a/src/public/css/admin/sidebar.css
+++ b/src/public/css/admin/sidebar.css
@@ -9,12 +9,16 @@
   overflow-y: scroll;
   border-radius: 10px;
   .resize-button{
-    margin-top: 10px;
-    width: 70px; 
-    height: 30px;
+    position: relative;
     background-color: #D1A6A6;
     border: none;
-    i {font-size: 30px}
+    i {
+      position: absolute;
+      top: 5px;
+      left: 5px;
+      font-size: 30px; 
+      color: black;
+    }
   }
   .admin-account{
     margin-top: 10px;
