--- a/src/public/css/admin/body.css
+++ b/src/public/css/admin/body.css
@@ -1,4 +1,6 @@
 @import url('https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css');
+@import url('https://cdn-uicons.flaticon.com/2.1.0/uicons-thin-rounded/css/uicons-thin-rounded.css');
+
 
 /* all pages */
 main {
