--- a/src/resource/views/partials/adminSidebar.hbs
+++ b/src/resource/views/partials/adminSidebar.hbs
@@ -1,6 +1,7 @@
 <div class="admin-sidebar-container">
   <button class="resize-button">
-    <i class="fi fi-br-bars-sort"></i>
+    <i class="fi fi-rr-cross"></i>
+    <i class="fi fi-rr-menu-burger" style="display: none;"></i>
   </button>
 
   <div class="admin-account">
@@ -21,6 +22,7 @@
     <a href="/admin/all-suppliers" class="sidebar-button" id="all-suppliers"><i class="fi fi-rr-supplier"></i><p>Đối tác</p></a>
     <a href="/admin/all-brands" class="sidebar-button" id="all-brands"><i class="fi fi-rr-brand"></i><p>Thương hiệu</p></a>
     <a href="/admin/all-products/trash" class="sidebar-button" id="trash"><i class="fi fi-rr-trash"></i><p>Kho</p></a>
+    <a href="/admin/all-attributes" class="sidebar-button" id="all-attributes"><i class="fi fi-rr-ballot"></i></i><p>Thuộc tính</p></a>
     <a href="/admin/profile" class="sidebar-button" id="profile"><i class="fi fi-rr-circle-user"></i><p>Thông Tin Cá Nhân</p></a>
     <a href="/admin/log-out" class="sidebar-button" id="log-out"><i class="fi fi-rr-exit"></i><p>Đăng Xuất</p></a>
   </div>
