--- a/src/resource/views/layouts/admin.hbs
+++ b/src/resource/views/layouts/admin.hbs
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="google-site-verification" content="I6NmnMAS5Resm_EUWaaHtPiaXpCoJyPcG77zdvu1hNo" />
   <link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/bunny-store/image/upload/v1730101524/web-img/image_fdrqpl.png" />
+  <link rel="stylesheet" href="/css/template.css">
   <link rel="stylesheet" href="/css/admin/body.css">
   <link rel="stylesheet" href="/css/admin/sidebar.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
