--- a/src/resource/views/layouts/users.hbs
+++ b/src/resource/views/layouts/users.hbs
@@ -6,6 +6,7 @@
   <meta name="google-site-verification" content="I6NmnMAS5Resm_EUWaaHtPiaXpCoJyPcG77zdvu1hNo"/>
   <meta name="description" content="Buny Store - Cửa hàng mỹ phẩm chính hãng với sản phẩm chăm sóc da và trang điểm từ thương hiệu uy tín. Khám phá bí quyết làm đẹp tại Buny Store!">
   <link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/bunny-store/image/upload/v1730101524/web-img/image_fdrqpl.png" />
+  <link rel="stylesheet" href="/css/template.css">
   <link rel="stylesheet" href="/css/user/body.css">
   <link rel="stylesheet" href="/css/user/header.css">
   <link rel="stylesheet" href="/css/user/fixedComponents.css">
