--- a/src/resource/views/layouts/empty.hbs
+++ b/src/resource/views/layouts/empty.hbs
@@ -6,6 +6,7 @@
   <meta name="google-site-verification" content="I6NmnMAS5Resm_EUWaaHtPiaXpCoJyPcG77zdvu1hNo" />
   <link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/bunny-store/image/upload/v1730101524/web-img/image_fdrqpl.png" />
   <link rel="stylesheet" href="/css/empty/denyAccess.css">
+  <link rel="stylesheet" href="/css/template.css">
   <link rel="stylesheet" href="/css/empty/signIn.css">
   <link rel="stylesheet" href="/css/user/body.css">
   <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.0.0/uicons-bold-rounded/css/uicons-bold-rounded.css'>
