--- a/src/resource/views/users/detailProduct.hbs
+++ b/src/resource/views/users/detailProduct.hbs
@@ -35,7 +35,7 @@
 
       <div class="button">
         <div class="add-to-cart"><p>Thêm Vào Giỏ</p></div>
-        <div class="buy-now"><a href="/all-orders"><p>Mua Ngay</p></a></div>
+        <div class="buy-now"><a href="/all-orders">Mua Ngay</a></div>
         <div class="out-of-order"><p>Hết Hàng</p></div>
       </div>
     </div>
