--- a/src/resource/views/users/signUp.hbs
+++ b/src/resource/views/users/signUp.hbs
@@ -17,6 +17,9 @@
         <div class="form-group password" style="display: none">
         </div>
 
+        <div class="form-group confirm-password" style="display: none">
+        </div>
+
         <div class="form-group">
           <p class="wrong-info"></p> 
         </div>
