--- a/src/public/css/user/detailProduct.css
+++ b/src/public/css/user/detailProduct.css
@@ -99,7 +99,25 @@
         };
         .add-to-cart, .buy-now {
           border: 1px solid #D1A6A6;
-          p, a { color: #D1A6A6; text-decoration: none; font-weight: bold; }
+          position: relative;
+          width: 100px;
+          height: 30px;
+          p, a { 
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            color: #D1A6A6; 
+            text-decoration: none; 
+            font-weight: bold; 
+            box-sizing: border-box;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-block-start: 0;
+            margin-block-end: 0;
+          }
         }
         .out-of-order {
           display: none;
