--- a/src/resource/views/partials/userFooter.hbs
+++ b/src/resource/views/partials/userFooter.hbs
@@ -1,7 +1,7 @@
 <div class="footer-container">
   <p>
     <b>Mỹ phẩm chính hãng, chất lượng đến từ Bunny House</b>
-    Chào mừng  điểm đến chăm sóc cơ thể, giúp bạn tự tin tỏa sáng mỗi ngày.
+    Điểm đến chăm sóc cơ thể, giúp bạn tự tin tỏa sáng mỗi ngày.
   </p>
   <ul>
     <li>Chăm sóc da: Chúng tôi cung cấp đầy đủ các sản phẩm chăm sóc da như sữa rửa mặt, kem dưỡng ẩm, serum đặc trị, mặt nạ dưỡng da... Từ các thương hiệu nổi tiếng như The Ordinary, Obagi, Paula’s Choice, Vaseline... Các sản phẩm đều được chọn lọc kỹ lưỡng nhằm mang lại hiệu quả tối ưu cho từng loại da, từ da dầu, da khô đến da nhạy cảm.</li>
