--- a/src/resource/views/users/allOrders.hbs
+++ b/src/resource/views/users/allOrders.hbs
@@ -65,18 +65,21 @@
       <label for="cashless">Chuyển Khoản</label>
 
       <div class="bank-account">
-        <div class="bank-info">
+        {{!-- <div class="bank-info">
           <span>19037654462013</span>
           <span>Techcombank</span>
           <span>Đặng Quỳnh Ly</span>
-        </div>
+        </div> --}}
         <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711070720/web-img/fc4c4fd10517a949f006_ndjvt6.png" alt="loading" loading="lazy">
+        <div class="form-group">
+          <label>Sau khi chuyển khoản xong mọi người chụp bill gửi cho mình nha</label>
+          <input type="file" name="img" id="img"/>
+        </div>
       </div>
     </div>
   </div>
 
   <div class="button"><button class="submit-button">Hoàn tất đặt hàng</button></div>
-
   <div class="button"><button class="next-button">Tiếp tục</button></div>
 </div>
 
