--- a/src/resource/views/users/introduce.hbs
+++ b/src/resource/views/users/introduce.hbs
@@ -1,9 +1,7 @@
-<div class="introduce-container">
-    <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711070724/web-img/full_logo_o0r2c7.jpg" alt="introduce"/ loading="lazy">
-    
+<div class="introduce-container">    
     <div>
       <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711070727/web-img/logo_xkavlj.webp" alt="introduce"/ loading="lazy">
-      <br>BunnyStore là cửa hàng mỹ phẩm của mình, một người yêu thích làm đẹp và luôn mong muốn mang đến cho các bạn những sản phẩm chất lượng, an toàn và hiệu quả nhất.
+      <br>BunnyStore là cửa hàng mỹ phẩm dành cho những người yêu thích làm đẹp, mang đến cho các bạn những sản phẩm chất lượng, an toàn và hiệu quả nhất.
       <br>Tại BunnyStore, các bạn có thể tìm thấy đa dạng các thương hiệu mỹ phẩm nổi tiếng từ Hàn Quốc, Nhật Bản, Mỹ, châu Âu,... cho đến các thương hiệu nội địa uy tín. Tất cả sản phẩm đều là hàng chính hãng hết nha.
       <br>Với kiến thức của mình về sản phẩm, mình hy vọng sẽ giúp các bạn lựa chọn được những sản phẩm phù hợp nhất với nhu cầu và loại da của bạn.
     </div>
@@ -29,8 +27,6 @@
         </ul>
       </span>
     </div>
-
-    <h5> Hãy đến với BunnyStore để cùng Ly khám phá thế giới mỹ phẩm đầy màu sắc và biến hóa bản thân trở nên xinh đẹp, rạng rỡ hơn mỗi ngày nha ! </h5>
 </div>
 
 <script src="/js/user/introduce.js"></script>
