--- a/src/public/css/template.css
+++ b/src/public/css/template.css
@@ -24,6 +24,15 @@ body::-webkit-scrollbar {display: none}
   opacity: 0;
   pointer-events: none;
 }
+.loading {
+  width: 50px;
+  height: 50px;
+  border: 5px solid #D1A6A6;
+  border-top-color: transparent;
+  border-bottom-color: transparent;
+  border-radius: 50%;
+  animation: 1s reloader infinite linear;
+}
 div.notification {
   position: fixed;
   opacity: 0;
