--- a/src/resource/views/users/introduce.hbs
+++ b/src/resource/views/users/introduce.hbs
@@ -1,14 +1,14 @@
 <div class="introduce-container">    
     <div>
       <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711070727/web-img/logo_xkavlj.webp" alt="introduce"/ loading="lazy">
-      <br>BunnyStore là cửa hàng mỹ phẩm dành cho những người yêu thích làm đẹp, mang đến cho các bạn những sản phẩm chất lượng, an toàn và hiệu quả nhất.
-      <br>Tại BunnyStore, các bạn có thể tìm thấy đa dạng các thương hiệu mỹ phẩm nổi tiếng từ Hàn Quốc, Nhật Bản, Mỹ, châu Âu,... cho đến các thương hiệu nội địa uy tín. Tất cả sản phẩm đều là hàng chính hãng hết nha.
+      <br>BunnyHouse là cửa hàng mỹ phẩm dành cho những người yêu thích làm đẹp, mang đến cho các bạn những sản phẩm chất lượng, an toàn và hiệu quả nhất.
+      <br>Tại BunnyHouse, các bạn có thể tìm thấy đa dạng các thương hiệu mỹ phẩm nổi tiếng từ Hàn Quốc, Nhật Bản, Mỹ, châu Âu,... cho đến các thương hiệu nội địa uy tín. Tất cả sản phẩm đều là hàng chính hãng hết nha.
       <br>Với kiến thức của mình về sản phẩm, mình hy vọng sẽ giúp các bạn lựa chọn được những sản phẩm phù hợp nhất với nhu cầu và loại da của bạn.
     </div>
     
     <div>
       <span>
-        <ul>Đến với BunnyStore, các bạn sẽ được:
+        <ul>Đến với BunnyHouse, các bạn sẽ được:
           <li> Trải nghiệm mua sắm mỹ phẩm chính hãng, đa dạng và phong phú.</li> 
           <li> Được tư vấn miễn phí.</li> 
           <li> Cập nhật những xu hướng làm đẹp mới nhất.</li> 
