update try catch block for fault tolerant

--- a/src/resource/views/admin/all/brand.hbs
+++ b/src/resource/views/admin/all/brand.hbs
@@ -1,6 +1,6 @@
 <div class="admin-all-brands-container">  
   <div class="board-title">
-    <p></p>
+    <p>Thương hiệu:</p>
   </div>
 
   <div class="control-bar">
