--- a/src/resource/views/admin/all/store.hbs
+++ b/src/resource/views/admin/all/store.hbs
@@ -1,6 +1,6 @@
 <div class="admin-all-stores-container">  
   <div class="board-title">
-    <p></p>
+    <p>Cửa hàng: </p>
   </div>
 
   <div class="control-bar">
