--- a/src/resource/views/admin/all/supplier.hbs
+++ b/src/resource/views/admin/all/supplier.hbs
@@ -1,6 +1,6 @@
 <div class="admin-all-suppliers-container">  
   <div class="board-title">
-    <p></p>
+    <p>Nhà cung cấp:</p>
   </div>
 
   <div class="control-bar">
