--- a/src/public/css/admin/sidebar.css
+++ b/src/public/css/admin/sidebar.css
@@ -21,7 +21,8 @@
     }
   }
   .admin-account{
-    margin-top: 10px;
+    margin: 10px 5px 5px 5px;
+    border-radius: 5px;
     background-color: #FFDFDF;
     display: flex;
     align-items: center;
@@ -39,7 +40,6 @@
     }
   }
   .admin-button {
-    margin-top: 20px;
     padding: 0px 5px;
     .sidebar-button {
       width: 100%;
