--- a/src/resource/views/admin/all/employee.hbs
+++ b/src/resource/views/admin/all/employee.hbs
@@ -1,6 +1,6 @@
 <div class="admin-all-employees-container">  
   <div class="board-title">
-    <p></p>
+    <p>Nhân sự: </p>
   </div>
 
   <div class="control-bar">
