--- a/src/resource/views/admin/all/order.hbs
+++ b/src/resource/views/admin/all/order.hbs
@@ -1,6 +1,6 @@
 <div class="admin-all-orders-container">  
   <div class="board-title">
-    <p></p>
+    <p>Đơn hàng: </p>
   </div>
   
   <div class="control-bar">
