--- a/src/resource/views/admin/all/purchase.hbs
+++ b/src/resource/views/admin/all/purchase.hbs
@@ -1,6 +1,6 @@
 <div class="admin-all-purchases-container">  
   <div class="board-title">
-    <p></p>
+    <p>Đơn nhập: </p>
   </div>
 
   <div class="control-bar">
