feat: update new part for the home page

--- a/src/resource/views/users/detailProduct.hbs
+++ b/src/resource/views/users/detailProduct.hbs
@@ -77,7 +77,7 @@
       {{#each holderComments}}
         <div class="comment">
           <p id="sender"></p>
-          <p id="rate"></p><i class="fi fi-ss-star"></i> 
+          <p><span id="rate"></span><i class="fi fi-ss-star"></i> </p>
           <p id="comment"></p>
         </div>
       {{/each}}
