--- a/src/resource/views/users/home.hbs
+++ b/src/resource/views/users/home.hbs
@@ -2,7 +2,7 @@
   {{> userAdvertise}}
 </div>
 
-<div class="products-board" id="favorite">
+<div class="products-board" id="favorite" style="display: none;">
   <div class="title" data-tippy-content="Xem toàn bộ sản phẩm">
     <i class="fi fi-sr-flame"></i>
     <div><a href="/all-products" class="main-title"><b>TOP SẢN PHẨM DÀNH RIÊNG CHO BẠN</b></a></div>
