--- a/src/resource/views/partials/adminSidebar.hbs
+++ b/src/resource/views/partials/adminSidebar.hbs
@@ -11,7 +11,7 @@
   </div>
   
   <div class="admin-button">
-    <a href="/admin" class="sidebar-button" id="home"><i class="fi fi-rr-home"></i><p>Trang chủ</p></a>
+    <a href="/admin/all" class="sidebar-button" id="all"><i class="fi fi-rr-home"></i><p>Trang chủ</p></a>
     <a href="/admin/all-customers" class="sidebar-button" id="all-customers"><i class="fi fi-rr-users"></i><p>Khách hàng</p></a>
     <a href="/admin/all-chats" class="sidebar-button" id="all-chats"><i class="fi fi-rr-comment"></i></i><p>Chat</p></a>
     <a href="/admin/all-purchases" class="sidebar-button" id="all-purchases"><i class="fi fi-rr-file-import"></i><p>Nhập hàng</p></a>
@@ -23,7 +23,7 @@
     <a href="/admin/all-brands" class="sidebar-button" id="all-brands"><i class="fi fi-rr-brand"></i><p>Thương hiệu</p></a>
     <a href="/admin/all-products/trash" class="sidebar-button" id="trash"><i class="fi fi-rr-trash"></i><p>Kho</p></a>
     <a href="/admin/all-attributes" class="sidebar-button" id="all-attributes"><i class="fi fi-rr-ballot"></i></i><p>Thuộc tính</p></a>
-    <a href="/admin/profile" class="sidebar-button" id="profile"><i class="fi fi-rr-circle-user"></i><p>Thông Tin Cá Nhân</p></a>
+    <a href="/admin/all-personal-info" class="sidebar-button" id="all-personal-info"><i class="fi fi-rr-circle-user"></i><p>Thông Tin Cá Nhân</p></a>
     <a href="/admin/log-out" class="sidebar-button" id="log-out"><i class="fi fi-rr-exit"></i><p>Đăng Xuất</p></a>
   </div>
 </div>
