--- a/src/resource/views/admin/home.hbs
+++ b/src/resource/views/admin/home.hbs
@@ -1,42 +1,55 @@
 <div class="admin-home-container">
+  <div class="date-picker">
+    Thời gian
+    <input type="month" id="date">
+    <button id="btn-date" class="btn btn-primary">Xem</button>
+  </div>
+  
   <div class="table">
-    <div class="customer"></div>
-    <div><canvas id="customer"></canvas></div>
-  </div> 
-
-  <div class="table">
-    <div class="order"></div>
-    <div><canvas id="order"></canvas></div>
+    <div class="finance"></div>
+    <div><canvas id="finance"></canvas></div>
   </div>
 
-  <div class="table">
-    <div class="supplier"></div>
-    <div><canvas id="supplier"></canvas></div>
-  </div>
+  <div class="tables">
+    <div class="table">
+      <div class="customer"></div>
+      <div><canvas id="customer"></canvas></div>
+    </div> 
 
-  <div class="table">
-    <div class="purchase"></div>
-    <div><canvas id="purchase"></canvas></div>
-  </div> 
+    <div class="table">
+      <div class="order"></div>
+      <div><canvas id="order"></canvas></div>
+    </div>
 
-  <div class="table">
-    <div class="product"></div>
-    <div><canvas id="product"></canvas></div>
-  </div>
+    <div class="table">
+      <div class="supplier"></div>
+      <div><canvas id="supplier"></canvas></div>
+    </div>
 
-  <div class="table">
-    <div class="brand"></div>
-    <div><canvas id="brand"></canvas></div>
-  </div> 
+    <div class="table">
+      <div class="purchase"></div>
+      <div><canvas id="purchase"></canvas></div>
+    </div> 
 
-  <div class="table">
-    <div class="store"></div>
-    <div><canvas id="store"></canvas></div>
-  </div>
+    <div class="table">
+      <div class="product"></div>
+      <div><canvas id="product"></canvas></div>
+    </div>
 
-  <div class="table">
-    <div class="employee"></div>
-    <div><canvas id="employee"></canvas></div>
+    <div class="table">
+      <div class="brand"></div>
+      <div><canvas id="brand"></canvas></div>
+    </div> 
+
+    <div class="table">
+      <div class="store"></div>
+      <div><canvas id="store"></canvas></div>
+    </div>
+
+    <div class="table">
+      <div class="employee"></div>
+      <div><canvas id="employee"></canvas></div>
+    </div>
   </div>
 </div>
 
