feat: update order access base on store code

--- a/src/resource/views/admin/all/order.hbs
+++ b/src/resource/views/admin/all/order.hbs
@@ -29,6 +29,10 @@
         <select id="paymentMethod" class="filter-btn">
           <option value="">Phương thức thanh toán</option>
         </select>
+
+        <select id="storeCode" class="filter-btn">
+          <option value="">Cửa hàng</option>
+        </select>
       </div>
       <button id="clear-filter" style="display: none">Xoá bộ lọc</button>
 
