--- a/src/resource/views/admin/detail/order.hbs
+++ b/src/resource/views/admin/detail/order.hbs
@@ -29,6 +29,10 @@
         <td><input type="text" id="note" disabled></td>
       </tr>
       <tr>
+        <td>Cửa hàng</td>
+        <td><input type="text" id="store" disabled></td>
+      </tr>
+      <tr>
         <td>Phương thức thanh toán</td>
         <td><select name="paymentMethod" id="paymentMethod"></select></td>
       </tr>
