--- a/src/resource/views/admin/create/order.hbs
+++ b/src/resource/views/admin/create/order.hbs
@@ -15,7 +15,7 @@
     </div>
     <div class="form-group">
       <label for="storeId">Chọn cửa hàng</label>
-      <select name="storeId" id="storeId" required>
+      <select name="storeCode" id="storeCode" required>
         <option value="" selected disabled>-- Cửa hàng --</option>
       </select>
     </div>
