feat: test successfully role access for manager

--- a/src/resource/views/admin/all/purchase.hbs
+++ b/src/resource/views/admin/all/purchase.hbs
@@ -22,10 +22,8 @@
 
       <div class="filter">
         <label>Lọc theo:</label>
-        <select id="purchaseDate" class="filter-btn">
-          <option value="">Ngày đặt hàng</option>
-          <option value="-1">Ngày mới nhất</option>
-          <option value="1">Ngày xa nhất</option>
+        <select id="storeCode" class="filter-btn">
+          <option value="">Cửa hàng</option>
         </select>
       </div>
 
