--- a/src/resource/views/admin/home.hbs
+++ b/src/resource/views/admin/home.hbs
@@ -2,17 +2,17 @@
   <div class="date-filter">
     <select name="filter" id="filter">
       <option value="">Lọc theo:</option>
-      <option value="date">Ngày</option>
+      <option value="date" selected>Ngày</option>
       <option value="month">Tháng</option>
     </select>
-  </div>
 
-  <div class="date-picker">
-    <input type="date" id="date" style="display:none">
-    <input type="month" id="month" style="display:none">
+    <div class="date-picker">
+      <input type="date" id="date">
+      <input type="month" id="month" style="display: none;">
+    </div>
+
+    <button id="submit-btn" class="btn btn-primary">Xem</button>
   </div>
-  
-  <button id="btn-date" class="btn btn-primary">Xem</button>
   
   <div class="table">
     <div class="finance"></div>
