--- a/src/resource/views/admin/create/purchase.hbs
+++ b/src/resource/views/admin/create/purchase.hbs
@@ -15,6 +15,13 @@
     </div>
 
     <div class="form-group">
+      <label for="supplierId">Chọn cửa hàng</label>
+      <select name="storeCode" id="storeCode">
+        <option value="" selected disabled>-- Cửa hàng --</option>
+      </select>
+    </div>
+
+    <div class="form-group">
       <label for="note">Ghi chú</label>
       <input type="text" id="note" name="note">
     </div>
