--- a/src/resource/views/admin/all/supplier.hbs
+++ b/src/resource/views/admin/all/supplier.hbs
@@ -44,13 +44,13 @@
     <table class="all-items">
       <thead>
         <tr>
-          <td style="width:  5%">STT           </td>
-          <td style="width: 15%">Mã Đối Tác    </td>
-          <td style="width: 20%">Tên Đối Tác   </td>
-          <td style="width: 20%">Địa chỉ       </td>
-          <td style="width: 15%">Tổng đơn nhập </td>
-          <td style="width: 15%">Tổng Chi phí  </td>
-          <td style="width: 10%">Chi tiết      </td>
+          <td style="width:  5%">STT              </td>
+          <td style="width: 15%">Mã nhà cung cấp  </td>
+          <td style="width: 20%">Tên nhà cung cấp </td>
+          <td style="width: 20%">Địa chỉ          </td>
+          <td style="width: 15%">Tổng đơn nhập    </td>
+          <td style="width: 15%">Tổng Chi phí     </td>
+          <td style="width: 10%">Chi tiết         </td>
         </tr>
       </thead>
 
