--- a/src/resource/views/admin/all/order.hbs
+++ b/src/resource/views/admin/all/order.hbs
@@ -14,7 +14,7 @@
         </select>
 
         <select id="totalOrderPrice" class="filter-btn">
-          <option value="">Giá trị đơn mặc định</option>
+          <option value="">Giá trị đơn</option>
           <option value="1">Giá trị tăng dần</option>
           <option value="-1">Giá trị giảm dần</option>
         </select>
