--- a/src/resource/views/admin/all/supplier.hbs
+++ b/src/resource/views/admin/all/supplier.hbs
@@ -23,7 +23,7 @@
       <div class="filter">
         <label>Lọc theo:</label>
         <select id="revenue" class="filter-btn">
-          {{!-- <option value="">Doanh thu mặc định</option>
+          {{!-- <option value="">Doanh thu</option>
           <option value="1">Doanh thu tăng dần</option>
           <option value="-1">Doanh thu giảm dần</option> --}}
         </select>
