--- a/src/resource/views/admin/all/purchase.hbs
+++ b/src/resource/views/admin/all/purchase.hbs
@@ -14,7 +14,7 @@
         </select>
 
         <select id="totalPurchasePrice" class="filter-btn">
-          <option value="">Giá trị mặc định</option>
+          <option value="">Giá trị</option>
           <option value="1">Giá trị tăng dần</option>
           <option value="-1">Giá trị giảm dần</option>
         </select>
