--- a/src/resource/views/layouts/users.hbs
+++ b/src/resource/views/layouts/users.hbs
@@ -6,11 +6,11 @@
   <meta name="google-site-verification" content="I6NmnMAS5Resm_EUWaaHtPiaXpCoJyPcG77zdvu1hNo"/>
   <meta name="description" content="Buny Store - Cửa hàng mỹ phẩm chính hãng với sản phẩm chăm sóc da và trang điểm từ thương hiệu uy tín. Khám phá bí quyết làm đẹp tại Buny Store!">
   <link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/bunny-store/image/upload/v1730101524/web-img/image_fdrqpl.png" />
-  <link rel="stylesheet" href="/css/template.css">
+  <link rel="stylesheet" href="/css/layouts/template.css">
   <link rel="stylesheet" href="/css/user/body.css">
-  <link rel="stylesheet" href="/css/user/header.css">
-  <link rel="stylesheet" href="/css/user/fixedComponents.css">
-  <link rel="stylesheet" href="/css/user/footer.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="/css/partials/header.css">
+  <link rel="stylesheet" href="/css/partials/fixedComponents.css">
+  <link rel="stylesheet" href="/css/partials/footer.css" media="print" onload="this.media='all'">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
