--- a/src/resource/views/users/home.hbs
+++ b/src/resource/views/users/home.hbs
@@ -2,6 +2,19 @@
   {{> userAdvertise}}
 </div>
 
+<div class="vouchers-board" id="voucher" style="display: none;">
+  <div class="title" data-tippy-content="Voucher dành riêng cho bạn">
+    <i class="fi fi-sr-bolt"></i>
+    <div><a href="/" class="main-title"><b>TOP VOUCHER DÀNH RIÊNG CHO BẠN</b></a></div>
+  </div>
+  
+  <div class="vouchers">
+    {{#each (holderData 5)}}
+      {{> voucher}}
+    {{/each}}
+  </div>
+</div>
+
 <div class="products-board" id="favorite" style="display: none;">
   <div class="title" data-tippy-content="Xem toàn bộ sản phẩm">
     <i class="fi fi-sr-flame"></i>
