--- a/src/resource/views/admin/all/order.hbs
+++ b/src/resource/views/admin/all/order.hbs
@@ -13,7 +13,7 @@
           <option value="1">Ngày xa nhất</option>
         </select>
 
-        <select id="totalOrderPrice" class="filter-btn">
+        <select id="totalNewOrderPrice" class="filter-btn">
           <option value="">Giá trị đơn</option>
           <option value="1">Giá trị tăng dần</option>
           <option value="-1">Giá trị giảm dần</option>
