--- a/src/resource/views/admin/detail/order.hbs
+++ b/src/resource/views/admin/detail/order.hbs
@@ -41,6 +41,10 @@
         <td><input type="text" id="total" disabled></td>
       </tr>
       <tr>
+        <td>Tổng Tiền Sau Giảm Giá</td>
+        <td><input type="text" id="new-total" disabled></td>
+      </tr>
+      <tr>
         <td>Trạng thái đơn</td>
         <td><select name="status" id="status"></select></td>
       </tr>
