--- a/src/resource/views/partials/voucher.hbs
+++ b/src/resource/views/partials/voucher.hbs
@@ -1,5 +1,5 @@
 <div class="voucher">
-  {{!-- <div class="loading"></div> --}}
+  <div class="loading"></div>
   <p id="name"></p>
   <p id="description"></p>
   <p id="end-date"></p>
