--- a/src/resource/views/users/allOrders.hbs
+++ b/src/resource/views/users/allOrders.hbs
@@ -25,6 +25,25 @@
     </div>
   </div>
 
+  <div class="voucher">
+    <p>Mã giảm giá</p>
+
+    <input type="text" placeholder="Nhâp mã giảm giá" id="voucher-code" name="voucher-code">
+  
+    <div class="price">
+      <div class="old-price">
+        <span class="old-price-text">Giá cũ: </span>
+        <span class="old-price-value"></span>
+      </div>
+      <div class="new-price">
+        <span class="new-price-text">Giá mới: </span>
+        <span class="new-price-value"></span>
+      </div>
+    </div>
+    
+    <div class="button"><button class="voucher-button">Áp dụng</button></div>
+  </div>
+
   <div class="contact-info">
     <p><i class="fi fi-rs-user-check"></i>Thông Tin Khách Hàng</p>
 
