--- a/src/resource/views/users/detailOrder.hbs
+++ b/src/resource/views/users/detailOrder.hbs
@@ -25,6 +25,9 @@
         <td>Tổng Tiền </td><td id="total-price"></td>
       </tr>
       <tr>
+        <td>Tổng Tiền Sau Giảm Giá</td><td id="total-new-price"></td>
+      </tr>
+      <tr>
         <td>Trạng Thái Đơn Hàng </td><td id="status"></td>
       </tr>
    </table>
