--- a/src/public/css/user/introduce.css
+++ b/src/public/css/user/introduce.css
@@ -1,15 +1,39 @@
 .introduce-container {
-  img {
-    width: 200px;
-  }
+  padding: 10px;
   div {
     display: flex;
-    align-items: center;
+    align-items: stretch;
     justify-content: space-around;
     padding: 10px 0;
-    gap: 10px;
-    font-size: larger;
-    img { width: 30% };
+    gap: 20px;
+    div.title {
+      width: 30%;
+      font-size: 50px;
+      font-weight: bold;
+      background-color: white;
+      padding: 10px;
+      border-radius: 50px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #D1A6A6;
+    }
+    div.content {
+      width: 70%;
+      font-size: large;
+    }
+  }
+
+  div.image {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+    img {
+      width: 30%;
+      border-radius: 20px;
+    }
   }
 }
 @media screen and (max-width: 700px) {
